<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    tools:context=".activity.DetailUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewUserDetail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:src="@drawable/azri"
            app:civ_border_color="@color/gray_900"
            app:civ_border_width="2dp"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/textViewUserNameDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewUserDetail"
            android:layout_marginBottom="5dp"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewUserUsernameDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUserNameDetail"
            android:layout_marginBottom="10dp"
            android:text="@string/user_username"

            android:textAlignment="center" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUserUsernameDetail">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_baseline_description_24"
                    tools:ignore="ContentDescription,HardcodedText" />

                <TextView
                    android:id="@+id/textViewUserDescriptionDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/description" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_baseline_house_siding_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textViewUserCompanyDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/company" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_baseline_location_on_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textViewUserLocationDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/location" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_baseline_person_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textViewUserFollowers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/follower_amp_following" />
            </TableRow>

        </TableLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>