<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewUserAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/azri"
            app:civ_border_color="@color/gray_900"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/imageViewUserAvatar"
            android:text="@string/user_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewUserUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUserName"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/imageViewUserAvatar"
            android:text="@string/user_username"
            android:textColor="@color/gray_400"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewUserDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewUserUsername"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/imageViewUserAvatar"
            android:text="@string/user_description"
            android:textSize="15sp"
            android:maxLines="2"
            android:ellipsize="end"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>